@@ -7,9 +7,8 @@ this package requires python-3.1 or later.
 
 All files are released under the Python PSF License
 (see http://www.python.org/psf/license)
-and are Copyright 2006-2014 RW Penney.
+and are Copyright 2006-2017 RW Penney.
 
 The package comes with NO WARRANTY, and NO CLAIMS OF FITNESS FOR ANY PURPOSE.
 However, the author welcomes *constructive* feedback
 and bug-fixes via: rwpenney 'AT' users 'DOT' sourceforge 'DOT' net
-
